[gd_scene load_steps=6 format=3 uid="uid://jk0j7dgjskru"]

[ext_resource type="Script" path="res://scenes/big_fire.gd" id="1_oobmn"]
[ext_resource type="Texture2D" uid="uid://cfv4vqcw72smn" path="res://images/big_fire.png" id="2_tj3hs"]
[ext_resource type="PackedScene" uid="uid://ddoq2dtf3va6t" path="res://scenes/health.tscn" id="3_ytw7m"]

[sub_resource type="SpriteFrames" id="SpriteFrames_vtwxt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_tj3hs")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gy5xw"]
size = Vector2(128, 128)

[node name="BigFire" type="Area2D" groups=["big_fire"]]
collision_mask = 4
script = ExtResource("1_oobmn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_vtwxt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_gy5xw")

[node name="SpawnTimer" type="Timer" parent="."]

[node name="Health" parent="." instance=ExtResource("3_ytw7m")]
position = Vector2(0, -96)
max_health = 250
width = 128

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="dead" from="Health" to="." method="_on_health_dead"]
